fix: Second attempt at fixing the background image on mobile browsers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 body {
     background-image: url(/assets/images/heartleaves.jpg);
-    background-size: 100%;
+    background-size: 100% 100%;
     background-position: center;
 }
 
